--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.5" rel="stylesheet">
+    <link href="css/style.css?0.2.6" rel="stylesheet">
     <title>Галерея &quot;Изображение&quot; | ОМК</title>
   </head>
   <body>
@@ -1193,7 +1193,7 @@
                           <div class="comment__text">
                             <p><a class="modalMain-comments__curentImg" href="3">#3 </a>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
                           </div>
-                          <div class="comment__link">
+                          <div class="comment__links">
                             <button class="comment__reply">Ответить</button>
                           </div>
                         </div>
@@ -1215,7 +1215,7 @@
                             <div class="comment__text">
                               <p>Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
                             </div>
-                            <div class="comment__link">
+                            <div class="comment__links">
                               <button class="comment__reply">Ответить</button>
                             </div>
                           </div>
@@ -1238,7 +1238,7 @@
                                 <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. </p>
                                 <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
                               </div>
-                              <div class="comment__link">
+                              <div class="comment__links">
                                 <button class="comment__reply">Ответить</button>
                               </div>
                             </div>
@@ -1263,7 +1263,7 @@
                           <div class="comment__text">
                             <p>Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.</p>
                           </div>
-                          <div class="comment__link">
+                          <div class="comment__links">
                             <button class="comment__reply">Ответить</button>
                           </div>
                         </div>
@@ -1286,7 +1286,7 @@
                           <div class="comment__text">
                             <p>Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!</p>
                           </div>
-                          <div class="comment__link">
+                          <div class="comment__links">
                             <button class="comment__reply">Ответить</button>
                           </div>
                         </div>
@@ -1374,7 +1374,7 @@
                             <div class="comment__text">
                               <p><a class="modalMain-comments__curentImg" href="3">#3 </a>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
                             </div>
-                            <div class="comment__link">
+                            <div class="comment__links">
                               <button class="comment__reply">Ответить</button>
                             </div>
                           </div>
@@ -1396,7 +1396,7 @@
                               <div class="comment__text">
                                 <p>Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
                               </div>
-                              <div class="comment__link">
+                              <div class="comment__links">
                                 <button class="comment__reply">Ответить</button>
                               </div>
                             </div>
@@ -1419,7 +1419,7 @@
                                   <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. </p>
                                   <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
                                 </div>
-                                <div class="comment__link">
+                                <div class="comment__links">
                                   <button class="comment__reply">Ответить</button>
                                 </div>
                               </div>
@@ -1444,7 +1444,7 @@
                             <div class="comment__text">
                               <p>Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.</p>
                             </div>
-                            <div class="comment__link">
+                            <div class="comment__links">
                               <button class="comment__reply">Ответить</button>
                             </div>
                           </div>
@@ -1467,7 +1467,7 @@
                             <div class="comment__text">
                               <p>Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!</p>
                             </div>
-                            <div class="comment__link">
+                            <div class="comment__links">
                               <button class="comment__reply">Ответить</button>
                             </div>
                           </div>
@@ -1864,7 +1864,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.5"></script>
+    <script src="js/main/main.js?0.2.6"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
