--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.5" rel="stylesheet">
+    <link href="css/style.css?0.2.6" rel="stylesheet">
     <title>Константин Александрович Константинопольский | ОМК</title>
   </head>
   <body>
@@ -1102,34 +1102,26 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-sm-3">
-                    <div class="card-icons main-icon__images">
-                      <table>
-                        <tbody>
-                          <tr>
-                                          <td><i class="main-icon__img icon-burg" data-icon="icon-burg" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-more" data-icon="icon-more" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-close" data-icon="icon-close" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-search" data-icon="icon-search" data-icon-item></i></td>
-                          </tr>
-                          <tr>
-                                          <td><i class="main-icon__img icon-shop_cart" data-icon="icon-shop_cart" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-filters" data-icon="icon-filters" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-like" data-icon="icon-like" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-fire-2" data-icon="icon-fire-2" data-icon-item></i></td>
-                          </tr>
-                          <tr>
-                                          <td><i class="main-icon__img icon-see" data-icon="icon-see" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-heart" data-icon="icon-heart" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-mark" data-icon="icon-mark" data-icon-item></i></td>
-                                          <td><i class="main-icon__img icon-symbol" data-icon="icon-symbol" data-icon-item></i></td>
-                          </tr>
-                        </tbody>
-                      </table>
+                  <div class="col-12 col-md-3">
+                    <div class="card-icons main-icon__images margin-bottom-10">
+                      <div class="card-icons__container">
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-burg" data-icon="icon-burg" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-more" data-icon="icon-more" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-close" data-icon="icon-close" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-search" data-icon="icon-search" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-shop_cart" data-icon="icon-shop_cart" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-filters" data-icon="icon-filters" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-like" data-icon="icon-like" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-fire-2" data-icon="icon-fire-2" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-see" data-icon="icon-see" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-heart" data-icon="icon-heart" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-mark" data-icon="icon-mark" data-icon-item></i></div>
+                        <div class="card-icons__iconbox"><i class="main-icon__img icon-symbol" data-icon="icon-symbol" data-icon-item></i></div>
+                      </div>
                     </div>
                   </div>
-                  <div class="col-sm-9">
-                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
+                  <div class="col-12 col-md-9">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-lg-30 padding-bottom-sm-10">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
                                         <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-heart" data-icon="icon-heart"></i></div>
@@ -1155,7 +1147,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-lg-30 padding-bottom-sm-10">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
                                         <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-fire-2" data-icon="icon-fire-2"></i></div>
@@ -1181,7 +1173,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-lg-30 padding-bottom-sm-10">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
                                         <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-aircraft" data-icon="icon-aircraft"></i></div>
@@ -1207,7 +1199,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-xl-30">
+                                  <div class="card card-links main-icon__card margin-bottom-0 padding-bottom-lg-30 padding-bottom-sm-10">
                                     <div class="card-links-wrap">
                                       <div class="card-links__img">
                                         <div class="card-links__imgbox main-icon__imgbox"><i class="main-icon__img icon-shop_cart" data-icon="icon-shop_cart"></i></div>
@@ -1254,7 +1246,7 @@
               </div>
               <div class="margin-bottom-15">
                 <div class="row">
-                  <div class="col-xl-4">
+                  <div class="col-6 col-sm-6 col-md-4">
                     <div class="card-person margin-bottom-15">
                       <div class="card-person__imgbox" style="background-image: url(img/widget-img-06.jpg)"><img src="img/widget-img-06.jpg" alt="image"></div>
                       <div class="card-person__content">
@@ -1265,7 +1257,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-4">
+                  <div class="col-6 col-sm-6 col-md-4">
                     <div class="card-person margin-bottom-15">
                       <div class="card-person__imgbox" style="background-image: url(img/widget-img-06.jpg)"><img src="img/widget-img-06.jpg" alt="image"></div>
                       <div class="card-person__content">
@@ -1276,7 +1268,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-4">
+                  <div class="col-6 col-sm-6 col-md-4">
                     <div class="card-person margin-bottom-15">
                       <div class="card-person__imgbox" style="background-image: url(img/widget-img-06.jpg)"><img src="img/widget-img-06.jpg" alt="image"></div>
                       <div class="card-person__content">
@@ -1287,7 +1279,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-4">
+                  <div class="col-6 col-sm-6 col-md-4">
                     <div class="card-person margin-bottom-15">
                       <div class="card-person__imgbox" style="background-image: url(img/widget-img-06.jpg)"><img src="img/widget-img-06.jpg" alt="image"></div>
                       <div class="card-person__content">
@@ -1298,7 +1290,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xl-4">
+                  <div class="col-6 col-sm-6 col-md-4">
                     <div class="card-person margin-bottom-15">
                       <div class="card-person__imgbox" style="background-image: url(img/widget-img-06.jpg)"><img src="img/widget-img-06.jpg" alt="image"></div>
                       <div class="card-person__content">
@@ -1321,7 +1313,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-4">
+                <div class="col-12 col-sm-4">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/block-img-14.jpg);">
                       <div class="card-warning-text hide">
@@ -1330,7 +1322,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-12 col-sm-8">
                   <div class="card">
                     <div class="card__text fix-height-210 text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1340,7 +1332,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-4">
+                <div class="col-12 col-sm-4">
                   <div class="card">
                     <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-13.jpg);">
                       <div class="card-warning-text hide">
@@ -1349,7 +1341,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-12 col-sm-8">
                   <div class="card">
                     <div class="card__text fix-height-210 text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
@@ -1535,7 +1527,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.5"></script>
+    <script src="js/main/main.js?0.2.6"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
