--- a/post.html
+++ b/post.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.2.5" rel="stylesheet">
+    <link href="css/style.css?0.2.6" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -929,7 +929,7 @@
               <div class="card card-full-head_special"></div>
               <div class="cards">
                 <article class="article">
-                  <div class="card margin-bottom-15">
+                  <div class="card margin-bottom-lg-15 margin-bottom-5">
                     <div class="article-imgwrap article-imgwrap_slim">
                       <div class="article-imgbox article-imgbox_head" style="background-image: url(img/post-img-01.jpg);"></div>
                     </div>
@@ -1024,12 +1024,20 @@
                       <div class="comment__text">
                         <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
                       </div>
-                      <div class="comment__link">
-                        <button class="comment__reply">Ответить</button>
+                      <div class="comment__links">
+                        <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_02">
+                          <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                        </div>
+                        <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="#commentator_02">
+                          <button>Развернуть</button><i class="icon-arrow-down"></i>
+                        </div>
+                        <div class="comment__reply comment__link_right">
+                          <button>Ответить</button>
+                        </div>
                       </div>
                     </div>
                   </div>
-                  <div class="comment" id="commentator_02">
+                  <div class="comment collapse" id="commentator_02">
                     <div class="comment-box">
                       <div class="comment__avatar" style="background-image: url(img/person-photo-02.jpg)"></div>
                       <div class="comment__content padding-10 padding-xl-15">
@@ -1046,12 +1054,20 @@
                         <div class="comment__text">
                           <p>ЮЛИЯ ШХИЯНЦ, Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
                         </div>
-                        <div class="comment__link">
-                          <button class="comment__reply">Ответить</button>
+                        <div class="comment__links">
+                          <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_03">
+                            <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                          </div>
+                          <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="#commentator_03">
+                            <button>Развернуть</button><i class="icon-arrow-down"></i>
+                          </div>
+                          <div class="comment__reply comment__link_right">
+                            <button>Ответить</button>
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <div class="comment" id="commentator_03">
+                    <div class="comment collapse" id="commentator_03">
                       <div class="comment-box">
                         <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
                         <div class="comment__content padding-10 padding-xl-15">
@@ -1069,15 +1085,117 @@
                             <p>ПЕТР ТУШИН, Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом.</p>
                             <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
                           </div>
-                          <div class="comment__link">
-                            <button class="comment__reply">Ответить</button>
+                          <div class="comment__links">
+                            <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_04">
+                              <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                            </div>
+                            <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="#commentator_04">
+                              <button>Развернуть</button><i class="icon-arrow-down"></i>
+                            </div>
+                            <div class="comment__reply comment__link_right">
+                              <button>Ответить</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="comment collapse" id="commentator_04">
+                        <div class="comment-box">
+                          <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
+                          <div class="comment__content padding-10 padding-xl-15">
+                            <div class="tagbox comment__tagbox">
+                              <div class="tag">
+                                <div class="comment__nickname"><span>СВЕТЛАНА НИКОЛАШИНА</span></div>
+                              </div>
+                              <div class="like-card">
+                                <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                                <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                              </div>
+                            </div>
+                            <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                            <div class="comment__text">
+                              <p>ПЕТР ТУШИН, Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом.</p>
+                              <p>Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
+                            </div>
+                            <div class="comment__links">
+                              <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_05">
+                                <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                              </div>
+                              <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="#commentator_05">
+                                <button>Развернуть</button><i class="icon-arrow-down"></i>
+                              </div>
+                              <div class="comment__reply comment__link_right">
+                                <button>Ответить</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="comment collapse" id="commentator_05">
+                          <div class="comment-box">
+                            <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
+                            <div class="comment__content padding-10 padding-xl-15">
+                              <div class="tagbox comment__tagbox">
+                                <div class="tag">
+                                  <div class="comment__nickname"><span>ЮЛИЯ ШХИЯНЦ</span></div>
+                                </div>
+                                <div class="like-card">
+                                  <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                                  <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                                </div>
+                              </div>
+                              <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                              <div class="comment__text">
+                                <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
+                              </div>
+                              <div class="comment__links">
+                                <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="#commentator_06">
+                                  <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                                </div>
+                                <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="#commentator_06">
+                                  <button>Развернуть</button><i class="icon-arrow-down"></i>
+                                </div>
+                                <div class="comment__reply comment__link_right">
+                                  <button>Ответить</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="comment collapse" id="commentator_06">
+                            <div class="comment-box">
+                              <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
+                              <div class="comment__content padding-10 padding-xl-15">
+                                <div class="tagbox comment__tagbox">
+                                  <div class="tag">
+                                    <div class="comment__nickname"><span>ЕЛЕНА МАЦИНОВА</span></div>
+                                  </div>
+                                  <div class="like-card">
+                                    <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                                    <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                                  </div>
+                                </div>
+                                <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                                <div class="comment__text">
+                                  <p>Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!</p>
+                                </div>
+                                <div class="comment__links">
+                                  <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="">
+                                    <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                                  </div>
+                                  <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="">
+                                    <button>Развернуть</button><i class="icon-arrow-down"></i>
+                                  </div>
+                                  <div class="comment__reply comment__link_right">
+                                    <button>Ответить</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="comment" id="commentator_04">
+                <div class="comment">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-04.jpg)"></div>
                     <div class="comment__content padding-10 padding-xl-15">
@@ -1094,13 +1212,21 @@
                       <div class="comment__text">
                         <p>Особое внимание мы уделяем недопущению детского и принудительного труда, дискриминации любых форм. Мы уважаем право сотрудников на формирование ассоциаций и других совместных организаций по представлению их интересов и общению с работодателем.</p>
                       </div>
-                      <div class="comment__link">
-                        <button class="comment__reply">Ответить</button>
+                      <div class="comment__links">
+                        <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="">
+                          <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                        </div>
+                        <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="">
+                          <button>Развернуть</button><i class="icon-arrow-down"></i>
+                        </div>
+                        <div class="comment__reply comment__link_right">
+                          <button>Ответить</button>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="comment" id="commentator_05">
+                <div class="comment">
                   <div class="comment-box">
                     <div class="comment__avatar" style="background-image: url(img/person-photo-05.jpg)"></div>
                     <div class="comment__content padding-10 padding-xl-15">
@@ -1117,8 +1243,16 @@
                       <div class="comment__text">
                         <p>Коллеги, у нас будет самый лучший корпоративный портал. Без сомнения!</p>
                       </div>
-                      <div class="comment__link">
-                        <button class="comment__reply">Ответить</button>
+                      <div class="comment__links">
+                        <div class="comment__link comment__link_left less hide" data-toggle="collapse" data-target="">
+                          <button>Свернуть</button><i class="icon-arrow-down icon-rotate-180"></i>
+                        </div>
+                        <div class="comment__link comment__link_left more hide" data-toggle="collapse" data-target="">
+                          <button>Развернуть</button><i class="icon-arrow-down"></i>
+                        </div>
+                        <div class="comment__reply comment__link_right">
+                          <button>Ответить</button>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -1209,7 +1343,7 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.2.5"></script>
+    <script src="js/main/main.js?0.2.6"></script>
     <!--if lte IE 9
     link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
     link(rel='stylesheet', href='ie9/css/style-ie9.css')
