--- a/ads.html
+++ b/ads.html
@@ -943,7 +943,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-01.jpg);">
                       <div class="card-warning-text hide">
@@ -952,7 +952,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -978,7 +978,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-02.jpg);">
                       <div class="card-warning-text hide">
@@ -987,7 +987,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1013,7 +1013,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/noimage.png);">
                       <div class="card-warning-text hide">
@@ -1022,7 +1022,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1048,7 +1048,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-03.jpg);">
                       <div class="card-warning-text hide">
@@ -1057,7 +1057,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1083,7 +1083,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-04.jpg);">
                       <div class="card-warning-text hide">
@@ -1092,7 +1092,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1118,7 +1118,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-05.jpg);">
                       <div class="card-warning-text hide">
@@ -1127,7 +1127,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
@@ -1153,7 +1153,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-12 col-sm-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-06.jpg);">
                       <div class="card-warning-text hide">
@@ -1162,7 +1162,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-12 col-sm-9">
                   <div class="card">
                     <div class="card__text fix-height-135 text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
