--- a/search-result.html
+++ b/search-result.html
@@ -967,7 +967,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-4">
+                <div class="col-12 col-sm-4">
                   <div class="card">
                     <div class="card-third__imgbox card__imgbox card__videobox" style="background-image: url(img/block-img-02.jpg);">
                       <div class="card-warning-text hide">
@@ -976,7 +976,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-12 col-sm-8">
                   <div class="card">
                     <div class="content-text fix-height-210 text-ddd-210">
                       <h3 class="margin-bottom-10">Интервью с Серафимович Александром про модернизацию новых разработок</h3>
