--- a/structure.html
+++ b/structure.html
@@ -942,14 +942,14 @@
                 <div class="tab-content">
                   <div class="tab-pane fade show active" id="tab1">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-3 col-lg-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"/><img src="img/logo-text.svg" alt="logo text"/></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-9 col-lg-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
@@ -957,13 +957,13 @@
                     </div>
                     <div class="row">
                       <div class="col-12">
-                        <div class="card margin-bottom-20">
+                        <div class="card margin-bottom-10 margin-bottom-lg-20">
                           <div class="content-subtitle">
                             <h2>Совет директоров</h2>
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card">
                           <div class="card-user" data-toggle="modal" data-target="#tabModal0">
                             <div class="card-user__photo" style="background-image: url(img/users/user-photo-02.png);"><img src="img/users/user-photo-02.png" alt="user-photo"></div>
@@ -991,10 +991,10 @@
                                 </div>
                                 <div class="modal-body">
                                   <div class="row">
-                                    <div class="col-xl-3">
+                                    <div class="col-sm-3">
                                       <div class="modal-imgbox" style="background-image: url(img/users/user-photo-02.png);"><img src="img/users/user-photo-02.png" alt="user-photo"/></div>
                                     </div>
-                                    <div class="col-xl-9">
+                                    <div class="col-sm-9">
                                       <div class="modal-text">
                                         <p>АНАТОЛИЙ МИХАЙЛОВИЧ СЕДЫХ — председатель совета директоров ОМК с июля 2017 года.</p>
                                         <p>Ранее был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ.</p>
@@ -1076,10 +1076,10 @@
                                 </div>
                                 <div class="modal-body">
                                   <div class="row">
-                                    <div class="col-xl-3">
+                                    <div class="col-sm-3">
                                       <div class="modal-imgbox" style="background-image: url(img/users/user-photo-06.png);"><img src="img/users/user-photo-06.png" alt="user-photo"/></div>
                                     </div>
-                                    <div class="col-xl-9">
+                                    <div class="col-sm-9">
                                       <div class="modal-text">
                                         <p>НАТАЛЬЯ КОНСТАНТИНОВНА ЕРЕМИНА — председатель совета директоров ОМК с июля 2017 года.</p>
                                         <p>Ранее был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ.</p>
@@ -1161,10 +1161,10 @@
                                 </div>
                                 <div class="modal-body">
                                   <div class="row">
-                                    <div class="col-xl-3">
+                                    <div class="col-sm-3">
                                       <div class="modal-imgbox" style="background-image: url(img/users/user-photo-08.png);"><img src="img/users/user-photo-08.png" alt="user-photo"/></div>
                                     </div>
-                                    <div class="col-xl-9">
+                                    <div class="col-sm-9">
                                       <div class="modal-text">
                                         <p>ВЛАДИМИР СТЕПАНОВИЧ МАРКИН — председатель совета директоров ОМК с июля 2017 года.</p>
                                         <p>Ранее был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ.</p>
@@ -1220,7 +1220,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-20">
                           <div class="card-user">
                             <div class="card-user__photo" style="background-image: url(img/users/user-photo-05.png);"><img src="img/users/user-photo-05.png" alt="user-photo"></div>
@@ -1249,10 +1249,10 @@
                               </div>
                               <div class="modal-body">
                                 <div class="row">
-                                  <div class="col-xl-3">
+                                  <div class="col-sm-3">
                                     <div class="modal-imgbox" style="background-image: url(img/users/user-photo-05.png);"><img src="img/users/user-photo-05.png" alt="user-photo"/></div>
                                   </div>
-                                  <div class="col-xl-9">
+                                  <div class="col-sm-9">
                                     <div class="modal-text">
                                       <p>АНАСТАСИЯ АНАТОЛЬЕВНА ПОЛЕТАЕВА — председатель совета директоров ОМК с июля 2017 года.</p>
                                       <p>Ранее был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ.</p>
@@ -1334,10 +1334,10 @@
                               </div>
                               <div class="modal-body">
                                 <div class="row">
-                                  <div class="col-xl-3">
+                                  <div class="col-sm-3">
                                     <div class="modal-imgbox" style="background-image: url(img/users/user-photo-03.png);"><img src="img/users/user-photo-03.png" alt="user-photo"/></div>
                                   </div>
-                                  <div class="col-xl-9">
+                                  <div class="col-sm-9">
                                     <div class="modal-text">
                                       <p>СВЕТЛАНА ЕВГЕНЬЕВНА ОБОЛЕНСКАЯ — председатель совета директоров ОМК с июля 2017 года.</p>
                                       <p>Ранее был председателем правления ОМК с января 2013 по июль 2017 гг. Руководящие должности в компании занимает с 1999 года. Сначала А.М. Седых возглавил Выксунский металлургический завод и вывел предприятие из кризиса. Затем был генеральным директором ОМК и председателем совета директором ВМЗ.</p>
@@ -1401,7 +1401,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card">
                           <div class="card-user">
                             <div class="card-user__photo" style="background-image: url(img/users/user-photo-06.png);"><img src="img/users/user-photo-06.png" alt="user-photo"></div>
@@ -1445,7 +1445,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card">
                           <div class="card-user">
                             <div class="card-user__photo" style="background-image: url(img/users/user-photo-09.png);"><img src="img/users/user-photo-09.png" alt="user-photo"></div>
@@ -1493,14 +1493,14 @@
                   </div>
                   <div class="tab-pane fade" id="tab2">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-3 col-lg-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"/><img src="img/logo-text.svg" alt="logo text"/></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-9 col-lg-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
@@ -1517,21 +1517,21 @@
                   <!-- other tabs-->
                   <div class="tab-pane fade" id="tab3">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"><img src="img/logo-text.svg" alt="logo text"></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Совет директоров</h2>
@@ -1608,7 +1608,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Правление</h2>
@@ -1703,21 +1703,21 @@
                   </div>
                   <div class="tab-pane fade" id="tab4">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"><img src="img/logo-text.svg" alt="logo text"></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Совет директоров</h2>
@@ -1794,7 +1794,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Правление</h2>
@@ -1889,21 +1889,21 @@
                   </div>
                   <div class="tab-pane fade" id="tab5">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"><img src="img/logo-text.svg" alt="logo text"></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Совет директоров</h2>
@@ -1980,7 +1980,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Правление</h2>
@@ -2075,21 +2075,21 @@
                   </div>
                   <div class="tab-pane fade" id="tab6">
                     <div class="row">
-                      <div class="col-xl-4">
+                      <div class="col-12 col-sm-4">
                         <div class="card">
                           <div class="logo-wrap"><img src="img/logo-small.svg" alt="logo"><img src="img/logo-text.svg" alt="logo text"></div>
                         </div>
                       </div>
-                      <div class="col-xl-8">
+                      <div class="col-12 col-sm-8">
                         <div class="card">
-                          <div class="card-text font-size-14">
+                          <div class="card-text font-size-10 font-size-lg-14">
                             <p><strong>Объединенная металлургическая компания (АО «ОМК»)</strong>– один из крупнейших российских производителей металлопродукции для ведущих энергетических, транспортных и промышленных компаний. ОМК — комплексный поставщик продукции для добычи и транспортировки газа и нефти. Выпускает трубы различного назначения, железнодорожные колеса, листовой прокат, соединительные детали трубопроводов, трубопроводную арматуру, рессоры.</p>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Совет директоров</h2>
@@ -2166,7 +2166,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6">
+                      <div class="col-12 col-sm-6">
                         <div class="card margin-bottom-0">
                           <div class="content-subtitle">
                             <h2>Правление</h2>
