--- a/blocks.html
+++ b/blocks.html
@@ -1426,7 +1426,7 @@
                         <h3>Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</h3>
                       </div>
                     </div>
-                    <div class="article-text article-preview-text">
+                    <div class="article-text article-preview-text text-ddd">
                       <p>Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от температура температура температура</p>
                     </div>
                   </div>
@@ -1450,7 +1450,7 @@
                         <h3>Как вам прошедший концерт?</h3>
                       </div>
                     </div>
-                    <div class="article-text article-preview-text">
+                    <div class="article-text article-preview-text text-ddd">
                       <p>Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от...</p>
                     </div>
                   </div>
@@ -1533,7 +1533,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="card"><a class="link-big" href="">&gt;&gt; Галереи</a></div>
+                <!--.card-->
+                <!--	a.link-big(href="") &gt;&gt; Галереи-->
               </div>
             </div>
           </div>
