--- a/productions-system.html
+++ b/productions-system.html
@@ -1123,7 +1123,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="card"><a class="link-big" href="">&gt;&gt; Галереи</a></div>
+                <!--.card-->
+                <!--	a.link-big(href="") &gt;&gt; Галереи-->
               </div>
             </div>
           </div>
